Wed, 20 Dec 2006 20:08:29 +0100 <thp@perli.net>
        * TODO: Updated gPodder 0.9.0 release goals

Wed, 20 Dec 2006 17:35:48 +0100 <thp@perli.net>
        * src/gpodder/libgpodder.py: Added get_size() and 
          size_to_string() functions to gPodderLib to get the size 
          of a folder/file and to convert the byte size to a string
        * src/gpodder/libpodcasts.py: Utilize gPodderLib's new 
          size_to_string() function for getting the size string; 
          fixed a bug when moving the download directory to another 
          device (thanks to Andy <apblist speakeasy net> for reporting)
        * src/gpodder/gpodder.py: Added moving progress dialog to 
          show progress of moving download directory to another device
        * bin/gpodder: the usual version bumping

Sun, 17 Dec 2006 02:19:04 +0100 <thp@perli.net>
        * src/gpodder/libipodsync.py: Re-factor general sync method 
          interface to "gPodderSyncMethod" and let gPodder_iPodSync 
          and gPodder_FSSync implement the syncing (added class 
          gPodder_FSSync that simply syncs to a specified folder)
        * src/gpodder/gpodder.py: Use new libipodsync + add support
          for filesystem-based MP3 players (please test this :)
        * TODO: fs-based mp3 player support seems to be working now
        * bin/gpodder: the usual version bumping

Sat, 16 Dec 2006 18:43:04 +0100 <thp@perli.net>
        * data/gpodder.glade: Re-structured the main menu
        * src/gpodder/gpodder.py: Added some code to make the main menu 
          appear more dynamic and context-specific + added some hotkeys
        * bin/gpodder: The usual: push version + date

Wed, 13 Dec 2006 13:57:54 +0100 <thp@perli.net>
        * src/gpodder/libwget.py: Make wget "continue" (-c) and "retry 
          infinite" (-t0) so we don't get strange results when server 
          connection is closed or other network problems come up