@@ -1,3 +1,10 @@
+Wed, 20 Dec 2006 20:43:02 +0100 <thp@perli.net>
+        * src/gpodder/gpodder.py: Added modified patch from Seth 
+          Remington to add support for a "download new episodes from 
+          all channels" menu item
+        * data/gpodder.glade: Added Ctrl+N menu item (Download all new 
+          episodes from all channels) to gPodder's main menu
+
 Wed, 20 Dec 2006 20:08:29 +0100 <thp@perli.net>
         * TODO: Updated gPodder 0.9.0 release goals
 
